Refactor docker containers & project building